5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_1802.log
== TEST (2019-03-28 11:08:04) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = (sqrt(5*D1)+(pi**(D2/3)))
print dano
-- ERROR:
File "XXXX", line 6
    print dano
             ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(dano)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:08:16) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = (sqrt(5*D1)+(pi**(D2/3)))
print (dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:08:50) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = ((sqrt(5*D1))+(pi**(D2/3)))
print (dano)
-- EXECUTION TIME:
0.145119
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
12.105672378589148
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
15.34682997614102
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
3.700659865061313
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:09:12) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = (sqrt(5*D1)+(pi**(D2/3)))
print (dano)
-- OUTPUT:
12.105672378589148
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:09:47) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = int(sqrt(5*D1)+(pi**(D2/3)))
print (dano)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:10:36) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = int(sqrt(5*D1)+(pi**(D2/3)))
print (pts_vida - dano)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:10:47) 
-- CODE:
pts_vida = float (input("Digite os pontos de vida do monstro:"))
D1 = int (input("Digite o valor do lancamento do dado 1:"))
D2 = int (input("Digite o valor do lancamento do dado 2:"))
from math import *
dano = int(sqrt(5*D1)+(pi**(D2/3)))
print (pts_vida - dano)
-- EXECUTION TIME:
0.130985
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
